--- a/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
@@ -36,7 +36,8 @@ data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_commu
 input_file <- "CCFRP_mpa_year.csv" 
 CCFRP_counts <- read.csv(file.path(data_path, input_file))%>%
                 filter(region4=='central')
-
+                     
+              
 
 #load kelp upc
 input_file <- "kelp_upc_mpa_year.csv" 
@@ -202,9 +203,12 @@ kelp_swath_distmat <-
 kelp_upc <- kelp_upc_counts %>%
                   rowwise() %>%
                   dplyr::mutate(sum = sum(across(8:ncol(.), na.rm = T))) %>%
-                  filter(!(sum==0))%>% #remove rows containing only zeros
+                  #filter(!(sum==0))%>% #remove rows containing only zeros
                   dplyr::select(-sum, bare_rock,unidentified_fish,
                                 bare_sand, shell_debris) #drop sum columns and non-species categories
+              
+
+kelp_upc[is.na(kelp_upc)] = 0                  
 
 #define grouping vars
 kelp_upc_group_vars <- kelp_upc%>%
@@ -230,23 +234,25 @@ kelp_upc_distmat <-
 
 kelp_fish <- kelp_fish_counts %>%
                   rowwise() %>%
-                  mutate(sum = sum(across(11:ncol(.), na.rm = T))) %>%
+                  dplyr::mutate(sum = sum(across(8:ncol(.), na.rm = T))) %>%
                   filter(!(sum==0))%>% #remove rows containing only zeros
-                  dplyr::select(-sum) #drop sum columns and non-species categories
+                  dplyr::select(-sum) %>%
+                               dplyr:: select(where(~ any(. != 0)))  #drop sum columns and non-species categories
+             
 
 #define grouping vars
 kelp_fish_group_vars <- kelp_fish %>%
-                    dplyr::select(1:10)
+                    dplyr::select(1:7)
 
 #define data for ordination
 kelp_fish_ord_data <- kelp_fish %>%
               ungroup() %>%
-              dplyr::select(11:ncol(.))
+              dplyr::select(8:ncol(.))
 
 #calculate relative abundance
-kelp_fish_rel <- decostand(kelp_fish_ord_data, method = "total")
+kelp_fish_rel <- decostand(kelp_fish_ord_data, method = "hellinger")
 
-kelp_fish_rel <- kelp_fish_rel %>% slice_sample(n=2000) # testing if work on smaller
+#kelp_fish_rel <- kelp_fish_rel %>% slice_sample(n=2000) # testing if work on smaller
 
 #generate a BC dissim matrix
 kelp_fish_distmat <- 
@@ -325,11 +331,13 @@ kelp_swath_ord <- metaMDS(kelp_swath_distmat, distance="bray", trymax = 100, par
 message("Done processing kelp_swath_ord")
 
 message("Processing kelp_fish_ord")
-kelp_fish_ord <- metaMDS(kelp_fish_distmat, distance="bray", trymax = 100, parallel = num_cores)
+kelp_fish_ord <- metaMDS(kelp_fish_distmat, distance="bray", noshare=0.2, parallel = num_cores)
+kelp_fish_ord <- metaMDS(kelp_fish_distmat, previous.best = kelp_fish_ord, noshare=0.1, trymax=300, parallel = num_cores)
 message("Done processing kelp_fish_ord")
 
 message("Processing kelp_upc_ord")
-kelp_upc_ord <- metaMDS(kelp_upc_distmat, distance="bray", trymax = 100, parallel = num_cores)
+kelp_upc_ord <- metaMDS(kelp_upc_distmat, distance="bray", noshare=0.2, parallel = num_cores)
+kelp_upc_ord <- metaMDS(kelp_upc_distmat,previous.best=kelp_upc_ord, noshare=0.1, trymax = 300, parallel = num_cores)
 message("Done processing kelp_upc_ord")
 
 message("Processing deep_reef_ord")
@@ -342,7 +350,7 @@ message("Done processing rocky_ord")
 
 
 #export to .RData
-save(CCFRP_ord, kelp_swath_ord, kelp_fish_ord, kelp_upc_ord, deep_reef_ord, rocky_ord, file = file.path(data_path, "bray_nmds_scores.rda"))
+#save(CCFRP_ord, kelp_swath_ord, kelp_fish_ord, kelp_upc_ord, deep_reef_ord, rocky_ord, file = file.path(data_path, "bray_nmds_scores.rda"))
 
 ```
 
