--- a/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
@@ -7,11 +7,6 @@ output: html_document
 
 
 
-
-#https://rpubs.com/CPEL/NMDS
-
-
-
 #load packages
 ```{r}
 require(tidyverse)
@@ -20,8 +15,7 @@ require(janitor)
 require(vegan)
 require(ggplot2)
 library(parallel)
-
-num_cores <- 20
+library(scales)
 ```
 
 
@@ -42,7 +36,8 @@ CCFRP_counts <- read.csv(file.path(data_path, input_file))%>%
 #load kelp upc
 input_file <- "kelp_upc_mpa_year.csv" 
 kelp_upc_counts <- read.csv(file.path(data_path, input_file))%>%
-                    filter(region4=='central')
+                    filter(region4=='central',
+                           mpa_defacto_designation=='smr'|mpa_defacto_designation=='ref')
 
 #load kelp swath
 input_file <- "kelp_swath_mpa_year.csv" 
@@ -339,6 +334,7 @@ rocky_distmat <-
 ```{R}
 # setting the seed 
 set.seed(123)
+num_cores=20
 
 message("Processing CCFRP_ord")
 CCFRP_ord <- metaMDS(CCFRP_distmat, distance="bray", trymax = 100, parallel = num_cores) #ordinates the dist matrix
@@ -369,10 +365,10 @@ message("Done processing rocky_ord")
 
 
 #export to .RData
+data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level"
 save(CCFRP_ord, kelp_swath_ord, kelp_fish_ord, kelp_upc_ord, deep_reef_ord, rocky_ord, file = file.path(data_path, "bray_nmds_scores.rda"))
 
 ```
-
 
 
 
@@ -554,18 +550,6 @@ KF_swath <- ggplot(data=cent, aes(NMDS1, NMDS2)) +
 ```
 
 
-
-
-
-
-
-
-
-
-
-
-**PART 1.1 - PLOT CENTROIDS PRE, DURING, POST-MHW**
-
 #Kelp upc scores and plot
 ```{r}
 
@@ -625,8 +609,6 @@ cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 
 
 ```
-
-
 
 
 #Kelp fish scores and plot
@@ -893,10 +875,6 @@ points(cent_year[, -1], pch = 22, col='blue', bg = c("red","blue","green"), cex 
 
 ```
   
-
-
-
-
 
 
 
@@ -1212,13 +1190,10 @@ colnames(dist_df)= c("group","distance","MPA")
 
 dist_df$community_type = c("fish","fish","inverts_algae","inverts_algae","inverts_algae","inverts_algae","fish","fish","fish","fish","inverts_algae","inverts_algae")
 
-View(dist_df
-     )
 
 dist_df$group <- factor(dist_df$group, levels=c("kelp_swath","deep_reef","kelp_upc","kelp_fish","CCFRP","rocky"))
 dist_df$MPA <- factor(dist_df$MPA, levels=c("ref","smr"))
 
-library(scales)
 
 A<- dist_df %>%
 ggplot(aes(x=group, y=as.numeric(distance), fill=MPA))+
@@ -1270,4 +1245,245 @@ ggarrange(A,B,
 
 
 ```
+
+
+
+
+
+
+
+
+
+
+**PART 1.3 COMMUNITY TRAJECTORY OVER TIME**
+
+
+#CCFRP scores and plot
+```{r}
+
+
+scrs <- scores(CCFRP_ord)
+
+scrs <- cbind(as.data.frame(scrs), desig_state=CCFRP_group_vars$desig_state, year=CCFRP_group_vars$year, MHW=CCFRP_group_vars$MHW, region4=CCFRP_group_vars$region4, mpa_designation=CCFRP_group_vars$mpa_designation) #to facilitate computing centroids, add group var
+
+scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
+scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
+scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
+
+
+cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
+
+
+
+
+CCFRP_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
+  #geom_segment(data = segs,
+               #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
+  geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
+  geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
+            )+           #line connecting groups (years)
+  ggtitle("CCFRP")+
+  theme(strip.text = element_text(size=18, face="bold"))+
+  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(text = element_text(20))
+  #geom_text(position=position_jitter(width=0.01, height=0.05))
+
+
+CCFRP_trajectory
+
+```
+
+
+
+#kelp_swath scores and plot
+```{r}
+
+scrs <- scores(kelp_swath_ord)
+
+scrs <- cbind(as.data.frame(scrs), desig_state= kelp_swath_group_vars$desig_state, year=kelp_swath_group_vars$year, MHW=kelp_swath_group_vars$MHW, region4=kelp_swath_group_vars$region4, mpa_designation=kelp_swath_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
+
+scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
+scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
+scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
+
+
+cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
+
+kelp_swath_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
+  #geom_segment(data = segs,
+               #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
+  geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
+  geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
+            )+           #line connecting groups (years)
+ 
+  ggtitle("kelp swath")+
+  theme(strip.text = element_text(size=18, face="bold"))+
+  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(text = element_text(20))
+  #geom_text(position=position_jitter(width=0.01, height=0.05))
+
+
+kelp_swath_trajectory
+
+
+```
+
+
+
+#kelp_upc scores and plot
+```{r}
+
+scrs <- scores(kelp_upc_ord)
+
+scrs <- cbind(as.data.frame(scrs), desig_state= kelp_upc_group_vars$desig_state, year=kelp_upc_group_vars$year, MHW=kelp_upc_group_vars$MHW, region4=kelp_upc_group_vars$region4, mpa_designation=kelp_upc_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
+
+scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
+scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
+scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
+
+
+cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
+
+kelp_upc_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
+  #geom_segment(data = segs,
+               #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
+  geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
+  geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
+            )+           #line connecting groups (years)
+ 
+  ggtitle("kelp UPC")+
+  theme(strip.text = element_text(size=18, face="bold"))+
+  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(text = element_text(20))
+  #geom_text(position=position_jitter(width=0.01, height=0.05))
+
+
+kelp_upc_trajectory
+
+
+```
+
+
+#kelp_fish scores and plot
+```{r}
+
+scrs <- scores(kelp_fish_ord)
+
+scrs <- cbind(as.data.frame(scrs), desig_state= kelp_fish_group_vars$desig_state, year=kelp_fish_group_vars$year, MHW=kelp_fish_group_vars$MHW, region4=kelp_fish_group_vars$region4, mpa_designation=kelp_fish_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
+
+scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
+scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
+scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
+
+
+cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
+
+kelp_fish_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
+  #geom_segment(data = segs,
+               #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
+  geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
+  geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
+            )+           #line connecting groups (years)
+ 
+  ggtitle("kelp UPC")+
+  theme(strip.text = element_text(size=18, face="bold"))+
+  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(text = element_text(20))
+  #geom_text(position=position_jitter(width=0.01, height=0.05))
+
+
+kelp_fish_trajectory
+
+
+```
+
+
+
+#deep_reef scores and plot
+```{r}
+
+scrs <- scores(deep_reef_ord)
+
+scrs <- cbind(as.data.frame(scrs), desig_state= deep_reef_group_vars$desig_state, year=deep_reef_group_vars$year, MHW=deep_reef_group_vars$MHW, region4=deep_reef_group_vars$region4, mpa_designation=deep_reef_group_vars$mpa_defacto_designation) #to facilitate computing centroids, add group var
+
+scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
+scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
+scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
+
+
+cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
+
+deep_reef_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
+  #geom_segment(data = segs,
+               #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
+  geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
+  geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
+            )+           #line connecting groups (years)
+ 
+  ggtitle("deep reef")+
+  theme(strip.text = element_text(size=18, face="bold"))+
+  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(text = element_text(20))
+  #geom_text(position=position_jitter(width=0.01, height=0.05))
+
+
+deep_reef_trajectory
+
+
+```
+
+
+#rocky scores and plot
+```{r}
+
+scrs <- scores(rocky_ord)
+
+scrs <- cbind(as.data.frame(scrs), desig_state= rocky_group_vars$desig_state, year=rocky_group_vars$year, MHW=rocky_group_vars$MHW, region4=rocky_group_vars$region4, mpa_designation=rocky_group_vars$mpa_designation) #to facilitate computing centroids, add group var
+
+scrs$region4 <- factor(scrs$region4, level = c("north","central","north islands","south")) #set order
+scrs$MHW <- factor(scrs$MHW, level = c("before","during","after")) #set order
+scrs$mpa_designation <- factor(scrs$mpa_designation, level = c("smr","ref")) #set order
+
+
+cent <- aggregate(cbind(NMDS1, NMDS2) ~ year+MHW+region4+mpa_designation, data = scrs, FUN = mean) #computes centroids by MHW and region
+
+rocky_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
+  #geom_segment(data = segs,
+               #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
+  geom_point(aes(shape=MHW, color=mpa_designation), size=4) +                           #centroids
+  geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
+            )+           #line connecting groups (years)
+ 
+  ggtitle("rocky intertidal")+
+  theme(strip.text = element_text(size=18, face="bold"))+
+  theme(plot.title = element_text(size=16, face="bold"))+
+  theme(text = element_text(20))
+  #geom_text(position=position_jitter(width=0.01, height=0.05))
+
+
+rocky_trajectory
+
+
+```
+
+
+#combine plots 
+```{r}
+require('ggpubr')
+figure<-ggarrange(CCFRP_trajectory, kelp_fish_trajectory, deep_reef_trajectory,
+          kelp_swath_trajectory, kelp_upc_trajectory, rocky_trajectory, common.legend = TRUE, legend="right",
+          font.label=list(size=40))
+annotate_figure(figure,
+                top = text_grob("central CA community structure", color = "black", face = "bold", size = 20)
+)
+
+
+#Export figure
+#png("/home/joshsmith/CA_MPA_Project/ca-mpa/analyses/5community_climate_ecology/figures/community_trajectory.png")
+#aurora = "/home/joshsmith/CA_MPA_Project/ca-mpa/analyses/5community_climate_ecology/figures"
+#ggsave(plot=last_plot(), path = aurora, device='png',filename = "community_trajectory.png", scale=1, dpi=72)
+#dev.off()
+```
+
+
 
