changed fig colors

--- a/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Community_change_MDS.Rmd
@@ -14,8 +14,9 @@ require(stringr)
 require(janitor)
 require(vegan)
 require(ggplot2)
-library(parallel)
-library(scales)
+require(parallel)
+require(scales)
+require(ggpubr)
 ```
 
 
@@ -325,6 +326,23 @@ rocky_distmat <-
 
 
 
+
+
+#save group vars
+#data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level"
+#save(CCFRP_group_vars,kelp_swath_group_vars,kelp_upc_group_vars,kelp_fish_group_vars,
+#     deep_reef_group_vars,rocky_group_vars,
+#     file = file.path(data_path, "group_vars.rda"))
+
+
+#save distance matrices
+#data_path <- "/home/shares/ca-mpa/data/sync-data/processed_data/ecological_community_data/year_level"
+#save(CCFRP_distmat,kelp_swath_distmat,kelp_upc_distmat,kelp_fish_distmat,
+#     deep_reef_distmat,rocky_distmat,
+#     file = file.path(data_path, "distance_matrices_BC.rda"))
+
+
+
 ```
 
 
@@ -464,6 +482,9 @@ df_ell$mpa_type <- word(df_ell$group, 1)
 cent$mpa_designation <- factor(cent$mpa_designation, level=c("smr","ref"))
 cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 
+
+
+
 CCFRP<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
   #geom_segment(data = segs,
                #mapping = aes(xend = oNMDS1, yend = oNMDS2)) + #spiders
@@ -480,6 +501,7 @@ CCFRP<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
   #                                 c("ref"="REF",
   #                                   "smr"="SMR")))+
   ggtitle("CCFRP")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -542,6 +564,7 @@ KF_swath <- ggplot(data=cent, aes(NMDS1, NMDS2)) +
   #                                 c("ref"="REF",
   #                                   "smr"="SMR")))+
   ggtitle("kelp forest swath ")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -602,6 +625,7 @@ cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
   #                                 c("ref"="REF",
   #                                   "smr"="SMR")))+
   ggtitle("kelp forest UPC")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -663,6 +687,7 @@ cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
   #                                 c("ref"="REF",
   #                                   "smr"="SMR")))+
   ggtitle("kelp forest fish")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -724,6 +749,7 @@ cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
   #                                 c("ref"="REF",
   #                                   "smr"="SMR")))+
   ggtitle("deep reef fish")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -785,6 +811,7 @@ cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
   #                                 c("ref"="REF",
   #                                   "smr"="SMR")))+
   ggtitle("rocky intertidal")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -796,7 +823,7 @@ cent$MHW <- factor(cent$MHW, level=c("before","during","after"))
 require('ggpubr')
 figure<-ggarrange(CCFRP, KF_fish, deep_reef,
           KF_swath, KF_upc, rocky, common.legend = TRUE, legend="right",
-          font.label=list(color="black",size=14))
+          font.label=list(color="black",size=14))+bgcolor('white')
 annotate_figure(figure,
                 top = text_grob("central CA community structure", color = "black", face = "bold", size = 20)
                 #bottom = text_grob("Data source: \n ToothGrowth data set", color = "blue",
@@ -1283,6 +1310,7 @@ CCFRP_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2)) +
   geom_path(data=cent, aes(NMDS1, NMDS2, group=mpa_designation, color=mpa_designation), size = 0.5, linetype=1 #aes(color=year)
             )+           #line connecting groups (years)
   ggtitle("CCFRP")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -1317,6 +1345,7 @@ kelp_swath_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
             )+           #line connecting groups (years)
  
   ggtitle("kelp swath")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -1352,6 +1381,7 @@ kelp_upc_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
             )+           #line connecting groups (years)
  
   ggtitle("kelp UPC")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -1386,6 +1416,7 @@ kelp_fish_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
             )+           #line connecting groups (years)
  
   ggtitle("kelp UPC")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -1421,6 +1452,7 @@ deep_reef_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
             )+           #line connecting groups (years)
  
   ggtitle("deep reef")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -1455,6 +1487,7 @@ rocky_trajectory<- ggplot(data=cent, aes(NMDS1, NMDS2, label=year)) +
             )+           #line connecting groups (years)
  
   ggtitle("rocky intertidal")+
+  scale_color_manual(values=c('red','blue'))+
   theme(strip.text = element_text(size=18, face="bold"))+
   theme(plot.title = element_text(size=16, face="bold"))+
   theme(text = element_text(20))
@@ -1472,7 +1505,7 @@ rocky_trajectory
 require('ggpubr')
 figure<-ggarrange(CCFRP_trajectory, kelp_fish_trajectory, deep_reef_trajectory,
           kelp_swath_trajectory, kelp_upc_trajectory, rocky_trajectory, common.legend = TRUE, legend="right",
-          font.label=list(size=40))
+          font.label=list(size=40))+bgcolor('white')
 annotate_figure(figure,
                 top = text_grob("central CA community structure", color = "black", face = "bold", size = 20)
 )
