--- a/analyses/7habitat/code/2-NMDS-Habitat.Rmd
+++ b/analyses/7habitat/code/2-NMDS-Habitat.Rmd
@@ -19,6 +19,7 @@ knitr::opts_chunk$set(
 # Packages 
 library(tidyverse)
 library(vegan)
+library(gdata)
 
 # Directories
 base.dir <- "/Volumes/GoogleDrive-105151121202188525604/Shared drives/NCEAS MPA network assessment/MPA Network Assessment: Working Group Shared Folder/data/sync-data" # Cori Local
@@ -65,6 +66,7 @@ att_data <- att_raw %>%
 
 names(att_data)
 ```
+# Part 1: Raw Values
 
 ## 1. metaMDS with all mpa attributes
 
@@ -131,6 +133,33 @@ ggplot(plot_df, aes(x = NMDS1, y = NMDS2)) +
        color = "",
        shape = "") + theme_classic()
 ```
+### another plot with all vectors
+
+```{r}
+fit_att_all <- fit %>% 
+  scores(., display = "vectors") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("attribute") %>% 
+  full_join(., fit_pval, by = "attribute")
+
+ggplot(plot_df, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  geom_point(aes(color = region,
+                 shape = region),
+             size = 3, alpha = 0.8) +
+  stat_ellipse(aes(color = region)) +
+  geom_segment(data = fit_att_all, aes(x = 0, xend = NMDS1,
+                                   y = 0, yend = NMDS2),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  scale_x_continuous(limits = c(-0.5, 0.55))+
+  geom_text(data = fit_att_all, aes(label = attribute),
+            size = 2.5) +
+  labs(title = "NMDS",
+       color = "",
+       shape = "") + theme_classic()
+```
+
 
 ## 3. separate estuarine MPAs
 
@@ -146,6 +175,7 @@ estuaries <- att_data_nmds %>%
 
 estuaries$name
 ```
+
 ### remove estuaries 
 
 ```{r}
@@ -210,6 +240,31 @@ ggplot(plot_df2, aes(x = NMDS1, y = NMDS2)) +
        color = "",
        shape = "") + theme_classic()
 ```
+### add plot with all vectors
+
+```{r}
+fit_att_noest_all <- fit_noest %>% 
+  scores(., display = "vectors") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("attribute") %>% 
+  full_join(., fit_pval_noest, by = "attribute")
+
+ggplot(plot_df2, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  geom_point(aes(color = region,
+                 shape = region),
+             size = 3, alpha = 0.8) +
+  stat_ellipse(aes(color = region)) +
+  geom_segment(data = fit_att_noest_all, aes(x = 0, xend = NMDS1,
+                                   y = 0, yend = NMDS2),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  geom_text(data = fit_att_noest_all, aes(label = attribute),
+            size = 2) +
+   labs(title = "NMDS MPA Attributes - Estuarine MPAs Removed",
+       color = "",
+       shape = "") + theme_classic()
+```
 
 
 ## 6. test for regional differences 
@@ -247,3 +302,289 @@ hsd <- TukeyHSD(disper)
 hsd
 
 ```
+
+# Part 2: Standardized (Z-SCORES)
+
+## 1. free some space
+
+```{r}
+keep(att_data_nmds, att_nmds_meta, estuaries, att_noest, att_noest_meta, sure = TRUE)
+```
+
+## 2. get z-scores
+
+```{r}
+# Convert each value into z-score 
+att_z <- scale(att_data_nmds) %>% as.data.frame()
+```
+
+## 3. metaMDS + envfit (all)
+
+```{r}
+# NMDS for all habitats, all MPAs
+mds_z <- metaMDS(att_z, distance = "euclidean",
+                 autotransform = F, k = 2, trymax = 999, maxit = 999)
+mds_z
+stressplot(mds_z)
+```
+
+Determine the relative contribution of variables to the separation
+
+```{r}
+# Output of metaMDS and the original matrix
+fit_z <- envfit(mds_z, att_z, perm = 999)
+fit_z
+
+plot(mds_z)
+plot(fit_z)
+ordiellipse(mds_z, groups = att_nmds_meta$region)
+```
+Figure out why vectors aren't matching
+
+- Vector scaling doesn't seem to be generated entirely by "ordiArrowMul"
+- Closer to 10x the raw vector score, not 1.5?
+- Unclear what's happening during plotting
+
+```{r}
+ordiArrowMul(fit_z)
+
+scrs <- scores(fit_z, "vectors")
+scrs*ordiArrowMul(fit_z, rescale = T, fill = 0.75)
+
+plot(mds_z, display = "sites", type = "n")
+points(mds_z, display = "sites", pch = 16, col = "black")
+plot(fit_z, col = "red")
+points(scrs*ordiArrowMul(fit_z), col = "blue")
+ordiellipse(mds_z, att_nmds_meta$region, display = "sites", kind = "se", conf = 0.95)
+
+```
+
+
+### plot
+
+Build dataframes for each component of the plot
+
+```{r}
+# Get coordinates for vectors
+fit_z_df <- scores(fit_z, display = "vectors") %>%  
+  as.data.frame() %>% 
+  rownames_to_column("attribute")
+
+# Get coordinates for NMDS points (each MPA)
+plot_df_z <- scores(mds_z, display = "sites") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("name") %>% 
+  full_join(att_nmds_meta, by = "name") %>% 
+  mutate(region = as.factor(region))
+
+# Get coordinates for ellipses
+plot.new()
+ell_z <- ordiellipse(mds_z, att_nmds_meta$region, kind = "se", conf = 0.95, label = T)
+
+ell_z_df <- data.frame()
+for(i in levels(plot_df_z$region)){
+  ell_z_df <- rbind(ell_z_df, 
+                    cbind(as.data.frame(with(plot_df_z[plot_df_z$region==i,],
+                                             vegan:::veganCovEllipse(ell_z[[i]]$cov, 
+                                                                     ell_z[[i]]$center, 
+                                                                     ell_z[[i]]$scale))), 
+                          region = i))}
+```
+
+#### all vectors
+
+```{r}
+ggplot(plot_df_z, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  # Points
+  geom_point(aes(color = region, shape = region),
+             size = 1.5, alpha = 0.5) +
+  # Ellipses with stat_ellipse (these are data ellipses)
+  #stat_ellipse(type = "t", aes(color = region), level = 0.95, linetype = 2) +
+  # Ellipses with ordiellipse
+  geom_path(data = ell_z_df, 
+            aes(x = NMDS1, y = NMDS2, color = region), linetype = 5) +
+  # Vectors
+  geom_segment(data = fit_z_df, 
+               aes(x = 0, xend = NMDS1*10,
+                   y = 0, yend = NMDS2*10),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  geom_text(data = fit_z_df, 
+            aes(x = NMDS1*10.5,
+                y = NMDS2*10.5,
+                label = attribute), size = 2) +
+  labs(title = "NMDS",
+       color = "",
+       shape = "") + 
+  theme_classic()
+```
+#### centroids and ellipses
+
+```{r}
+# Get cooordinates for centroids
+z_centroids <- plot_df_z %>% 
+  group_by(region) %>% 
+  summarize(NMDS1 = mean(NMDS1),
+            NMDS2 = mean(NMDS2))
+
+# Plot 
+ggplot(plot_df_z, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  # Points just centroids
+  geom_point(data = z_centroids,
+             aes(color = region, shape = region),
+             size = 1.5, alpha = 0.5) +
+  # Ellipses with stat_ellipse (these are data ellipses)
+  #stat_ellipse(type = "t", aes(color = region), level = 0.95, linetype = 2) +
+  # Ellipses with ordiellipse
+  geom_path(data = ell_z_df, 
+            aes(x = NMDS1, y = NMDS2, color = region), linetype = 5) +
+  # # Vectors
+  # geom_segment(data = fit_z_df, 
+  #              aes(x = 0, xend = NMDS1*5,
+  #                  y = 0, yend = NMDS2*5),
+  #              arrow = arrow(length = unit(0.25, "cm")),
+  #              col = "black") +
+  # geom_text(data = fit_z_df, 
+  #           aes(x = NMDS1*5.5,
+  #               y = NMDS2*5.5,
+  #               label = attribute), size = 2) +
+  labs(title = "NMDS",
+       color = "",
+       shape = "") + 
+  theme_classic()
+```
+
+## 4. metaMDS + envfit (no estuaries)
+
+```{r}
+# Convert each value into z-score 
+noest_z <- scale(att_noest) %>% as.data.frame()
+
+# NMDS for all habitats, estuarine MPAs removed
+mds_noest_z <- metaMDS(noest_z, distance = "euclidean", autotransform = F,
+                      k = 2, trymax = 999, maxit = 999)
+mds_noest_z
+stressplot(mds_noest_z)
+```
+
+```{r}
+# Output of metaMDS and the original matrix
+fit_noest_z <- envfit(mds_noest_z, noest_z, perm = 999)
+fit_noest_z
+
+```
+Build dataframes for plotting
+
+```{r}
+# Get pvals for vectors
+noest_pvals <- fit_noest_z$vectors$pvals %>% 
+  as.data.frame() %>% 
+  rownames_to_column("attribute") %>% 
+  dplyr::rename("pvals" = ".") 
+
+# Get coordinates for vectors
+fit_noest_z_df <- scores(fit_noest_z, display = "vectors") %>%  
+  as.data.frame() %>% 
+  rownames_to_column("attribute") %>% 
+  full_join(., noest_pvals)
+
+# Get coordinates for NMDS points (each MPA)
+plot_df_z <- scores(mds_noest_z, display = "sites") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("name") %>% 
+  full_join(att_noest_meta, by = "name") %>% 
+  mutate(region = as.factor(region))
+
+# Get coordinates for ellipses
+plot.new()
+ell_z <- ordiellipse(mds_noest_z, att_noest_meta$region, kind = "se", conf = 0.95, label = T)
+
+ell_z_df <- data.frame()
+for(i in levels(plot_df_z$region)){
+  ell_z_df <- rbind(ell_z_df, 
+                    cbind(as.data.frame(with(plot_df_z[plot_df_z$region==i,],
+                                             vegan:::veganCovEllipse(ell_z[[i]]$cov, 
+                                                                     ell_z[[i]]$center, 
+                                                                     ell_z[[i]]$scale))), 
+                          region = i))}
+```
+
+### plot
+
+#### base plot
+
+```{r}
+noest_scrs <- scores(fit_noest_z, "vectors")
+noest_scrs*ordiArrowMul(fit_noest_z, rescale = T, fill = 0.75)
+
+plot(mds_noest_z, display = "sites", type = "n")
+points(mds_noest_z, display = "sites", pch = 16, col = "black")
+plot(fit_noest_z, col = "red")
+points(noest_scrs*ordiArrowMul(fit_noest_z), col = "blue")
+ordiellipse(mds_noest_z, att_noest_meta$region, display = "sites", kind = "se", conf = 0.95)
+```
+
+#### all vectors
+
+```{r}
+ggplot(plot_df_z, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  # Points
+  geom_point(aes(color = region, shape = region),
+             size = 1.5, alpha = 0.5) +
+  # Ellipses with ordiellipse
+  geom_path(data = ell_z_df, 
+            aes(x = NMDS1, y = NMDS2, color = region), linetype = 5) +
+  # Vectors
+  geom_segment(data = fit_noest_z_df, 
+               aes(x = 0, xend = NMDS1*10,
+                   y = 0, yend = NMDS2*10),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  geom_text(data = fit_noest_z_df, 
+            aes(x = NMDS1*10.5,
+                y = NMDS2*10.5,
+                label = attribute), size = 2) +
+  labs(title = "NMDS",
+       color = "",
+       shape = "") + 
+  theme_classic()
+```
+
+#### sig vectors only
+
+```{r}
+ggplot(plot_df_z, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  # Points
+  geom_point(aes(color = region, shape = region),
+             size = 1.5, alpha = 0.5) +
+  # Ellipses with ordiellipse
+  geom_path(data = ell_z_df, 
+            aes(x = NMDS1, y = NMDS2, color = region), linetype = 5) +
+  # Vectors
+  geom_segment(data = fit_noest_z_df %>% 
+                 filter(pvals == 0.001), 
+               aes(x = 0, xend = NMDS1*10,
+                   y = 0, yend = NMDS2*10),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  geom_text(data = fit_noest_z_df %>% 
+                 filter(pvals == 0.001), 
+            aes(x = NMDS1*10.5,
+                y = NMDS2*10.5,
+                label = attribute), size = 2) +
+  labs(title = "NMDS - Estuaries removed, vectors with p = 0.001",
+       color = "",
+       shape = "") + 
+  theme_classic()
+```
+
+
+# Relevant links and resources
+
+Information on why stat_ellipse doesn't calculate confidence interval:
+https://github.com/tidyverse/ggplot2/issues/2776
+
